# AIS

./: .gitignore  .gitlab-ci.yml  .sca_commit  README.md  docker-compose.yml  gitattributes  sbom.cdx.json
.github/workflows/: ci.yml  deploy.yml
S3-mob/: .gitignore  settings.gradle.kts
S3-mob/app/: build.gradle.kts
S3-mob/app/src/main/: AndroidManifest.xml
backend/auth-service/: Dockerfile  env.example  go.mod  go.sum
backend/auth-service/cmd/: main.go
backend/auth-service/internal/config/: config.go
backend/auth-service/internal/handlers/: authHandler.go
backend/auth-service/internal/models/: userModel.go
backend/auth-service/internal/repository/: userRepository.go
backend/auth-service/internal/response/: response.go
backend/auth-service/internal/service/: auth.go
backend/gateway/: Dockerfile  env.example  go.mod  go.sum
backend/gateway/cmd/: main.go
backend/gateway/internal/middleware/: chain.go  csrf.go  logger.go  ratelimit.go  session.go
backend/gateway/internal/proxy/: proxy.go
backend/s3-storage/: CMakeLists.txt  Dockerfile  config.json.template  main.cc
backend/s3-storage/controllers/: FilesController.cc  FilesController.h  SwaggerController.h
backend/s3-storage/filters/: CORSFilter.h  RateLimitFilter.cc  RateLimitFilter.h
backend/s3-storage/frontend/: Dockerfile  nginx.conf
backend/s3-storage/frontend/src/components/: Breadcrumb.js  FileList.js  Modals.js
backend/s3-storage/models/: Bucket.h
backend/s3-storage/services/: BucketService.cc  DatabaseService.h  DedupService.cc  DedupService.h  StorageService.cc  StorageService.h
backend/s3-storage/tests/integration/: test_delete_bucket_400.sh  test_delete_bucket_rest.sh  test_delete_file_rest.sh  test_delete_file_rest_404.sh  test_gateway_auth.sh  test_move_cross_bucket_folder.sh  test_move_folder_cross_bucket_400.sh  test_move_quota_exceeded.sh  test_shared_download.sh
backend/s3-storage/tests/unit/: test_response_helper.cc  test_uuid_generator.cc
backend/s3-storage/utils/: HealthCheck.cc  HealthCheck.h  Logger.cc  Metrics.cc  ResponseHelper.cc
backend/task-service/: Dockerfile  go.mod  main.go
backend/task-service/config/: config.go
backend/task-service/handlers/: reference_handler.go  task_handler.go
backend/task-service/models/: status.go  task.go
backend/task-service/repository/: task_repository.go
ci/: rules.yml  stages.yml  variables.yml
ci/integrations/: defectdojo.yml
ci/policies/: thresholds.yml
ci/security/: secrets.yml
ci/stages/: build.yml  post-build.yml  post.yml  pre-build.yml  pre.yml
ci/templates/: curl-jq.yml
frontend/auth-service/: index.html
frontend/auth-service/css/: style.css
frontend/auth-service/js/: api.js  app.js
frontend/s3-storage/: vite.config.js
frontend/s3-storage/src/: config.js  main.js
frontend/s3-storage/src/api/: client.js
frontend/s3-storage/src/styles/: main.css
frontend/task-frontend/: README.md  nginx.conf  package.json  vite.config.ts
frontend/task-frontend/src/: App.vue
frontend/task-frontend/src/api/: referenceApi.js  taskApi.js
frontend/task-frontend/src/components/: TaskFilters.vue
frontend/task-frontend/src/router/: index.js
frontend/task-frontend/src/utils/: request.js
infra/: init-db.sql  nginx.conf
mobile/tasker/t/: pubspec.yaml
mobile/tasker/t/lib/: main.dart
semgrep/: semgrep.yml
semgrep/reports/: report.json  report.sarif  report1.json  report1.sarif
semgrep/rules/custom/: gin-log-user-input.yaml
semgrep/rules/language/: go-error-ignored.yaml  go-log-sensitive-2.yaml  go-log-sensitive.yaml  go-nil-dereference.yaml  go-sprintf-sql.yaml  go-weak-rand.yaml  mayh-rand.yaml
semgrep/rules/owasp/: filepath-clean-misuse.yaml  go-hardcoded-secret-2.yaml  go-hardcoded-secret.yaml  go-idor-no-ownership.yaml  go-path-traversal.yaml  go-sqli-format.yaml  go-ssrf.yaml
semgrep/rules/stack/: cookie-httponly.yaml  gin-debug-mode.yaml  gin-missing-csrf.yaml  gin-trust-header.yaml  go-bcrypt-low-cost.yaml  redis-no-tls.yaml
src/: bucketOrder.js  cookies.txt  docker-compose.yml  main.js  store.js
src/backend/auth-service/: go.mod  sbom-image.cdx.json
src/backend/gateway/: sbom-image.cdx.json
src/backend/gateway/cmd/: main.go
src/backend/s3-storage/: Dockerfile  README.md  VERIFY.md  config.json  docker-compose.yml
src/backend/s3-storage/controllers/: HealthController.cc  HealthController.h  SwaggerController.cc
src/backend/s3-storage/docs/: FRONTEND.md
src/backend/s3-storage/filters/: CORSFilter.cc  GatewayAuthFilter.cc  GatewayAuthFilter.h
src/backend/s3-storage/migrations/: 001_init.sql
src/backend/s3-storage/models/: File.h  SharedLink.h
src/backend/s3-storage/scripts/: reproduce-segfault.sh  setup-deps.sh  setup.sh  verify-all.sh
src/backend/s3-storage/services/: BucketService.h  CleanupService.cc  CleanupService.h  DatabaseService.cc  FileService.cc  FileService.h  SecurityService.cc  SecurityService.h  ShareService.cc  ShareService.h
src/backend/s3-storage/tests/: CMakeLists.txt
src/backend/s3-storage/tests/integration/: test_deduplicate_bucket.sh  test_delete_401.sh  test_delete_bucket.sh  test_delete_file.sh  test_delete_file_404.sh  test_delete_file_rest_400.sh  test_health.sh  test_move_cross_bucket_root.sh  test_move_dest_bucket_404.sh  test_move_same_bucket.sh  test_shared_download_404.sh
src/backend/s3-storage/tests/unit/: test_gateway_auth_filter.cc
src/backend/s3-storage/utils/: Logger.h  Metrics.h  ResponseHelper.h  UUIDGenerator.cc  UUIDGenerator.h
src/backend/task-service/: sbom-image.cdx.json
src/backend/task-service/dto/: task_request.go
src/backend/task-service/handlers/: reference_handler.go  task_handler.go
src/components/: BucketList.js  Uploader.js
src/frontend/auth-service/: index.html
src/frontend/auth-service/js/: app.js
src/frontend/s3-storage/: Dockerfile  index.html  package.json
src/frontend/task-frontend/: Dockerfile  index.html  npm-audit-report.json  package-lock.json  sbom-image.cdx.json  sbom.json  vite.config.ts
src/infra/: nginx.conf
src/infra/ssl/: cert.pem  key.pem
src/styles/: app.css
(+105 files in other folders)
